deployment.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: canary-app
  namespace: app
spec:
  replicas: 5
  revisionHistoryLimit: 2
  selector:
    matchLabels:
      app: rollout-canary
  template:
    metadata:
      labels:
        app: rollout-canary
    spec:
      terminationGracePeriodSeconds: 60
      containers:
        - name: rollouts-demo
          image: 362708816803.dkr.ecr.ap-northeast-2.amazonaws.com/skills-repo:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
          resources:
          requests:
            memory: "128Mi"
            cpu: "128m"
          limits:
            memory: "128Mi"
            cpu: "128m"
  strategy:
    canary:
      steps:
      - setWeight: 33
      - pause: {duration: 30s}
      - setWeight: 66
      - pause: {duration: 30s}
      - setWeight: 100
    
---
apiVersion: v1
kind: Service
metadata:
  name: rollout-canary-svc
  namespace: app
spec:
  selector:
    app: rollout-canary
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: app
  name: canary-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/group.name: rollouts-test
    alb.ingress.kubernetes.io/scheme: internal
    alb.ingress.kubernetes.io/tags: Name=skills-canary-alb
    alb.ingress.kubernetes.io/healthcheck-path: "/healthcheck"
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80}]'
    alb.ingress.kubernetes.io/backend-protocol: HTTP
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - http:
        paths:
          - backend:
              service:
                name: rollout-canary-svc
                port:
                  number: 80
            path: /
            pathType: Prefix
